--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,13 +5,17 @@
  <meta charset="UTF-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
  <title>Document Management System</title>
 </head>
 <body>
-<div id="app"></div>
- <script src="/bundle.js"></script>
 <h1>dms welcome to dms</h1>
+<div id="app"></div>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+ <script src="/bundle.js"></script>
+
 
 </body>
 </html>
