[feature 148127035] fixed side nav

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -24,10 +24,7 @@
 
  <div id="app"></div>
  <script src="/bundle.js"></script>
- <script>  $(document).ready(function() {
-    $('select').material_select();
-      $(".button-collapse").sideNav();
-});
+ <script> 
 </script>
 </body>
 </html>
